Create specification migration
